# telbot_mafia

./: .gitignore  04_Oct_2024.gs  13_Oct_2024.gs  README.md  gs.py  pyproject.toml  secret_data_template.py  telbot_cal_reg.py  telbot_globals.py  telbot_mafia.py  telbot_user_reg.py
additional_scripts/: digits_to_letters.py  gs_addtelhyperlinks.py
